
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "srsinst.uga"
authors = [
    {name = "Chulhoon Kim"},
]
description = "Instrument driver package for Universal Gas Analyzers (UGA) from Stanford Research Systems"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["UGA", "universal gas analyzer", "SRS", "Stanford Research Systems"]
license = {text = "MIT license"}
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Scientific/Engineering"
]
dependencies = [
    "numpy", "scipy", "srsgui>=0.3.3", "srsinst.rga>=0.3.3"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "srsinst.uga.__version__"}

[project.optional-dependencies]
full = ['matplotlib >= 3.6.2', 'pyside6']
# For Dependency specification, Refer to PEP 631

[project.urls]
homepage = "https://github.com/thinkSRS/srsinst.uga"
repository = "https://github.com/thinkSRS/srsinst.uga.git"

[project.scripts]
uga = "srsinst.uga.__main__:main"
